--- a/imagines.qrc
+++ b/imagines.qrc
@@ -11,5 +11,15 @@
         <file>imagines/button-background.9.png</file>
         <file>imagines/button-background@2x.9.png</file>
         <file>imagines/rect1798.png</file>
+        <file>imagines/tabbutton-background@2x.9 .png</file>
+        <file>imagines/tabbutton-background.9.png</file>
+        <file>imagines/tabbutton-background-checked.9.png</file>
+        <file>imagines/tabbutton-background-checked@2x.9.png</file>
+        <file>imagines/tabbutton-background-checked-hovered.9.png</file>
+        <file>imagines/tabbutton-background-checked-hovered@2x.9.png</file>
+        <file>imagines/tabbutton-background-hovered.9.png</file>
+        <file>imagines/tabbutton-background-hovered@2x.9.png</file>
+        <file>imagines/tabbutton-background-pressed.9.png</file>
+        <file>imagines/tabbutton-background-pressed@2x.9.png</file>
     </qresource>
 </RCC>
