--- a/imagines.qrc
+++ b/imagines.qrc
@@ -21,5 +21,10 @@
         <file>imagines/tabbutton-background-hovered@2x.9.png</file>
         <file>imagines/tabbutton-background-pressed.9.png</file>
         <file>imagines/tabbutton-background-pressed@2x.9.png</file>
+        <file>imagines/1.jpg</file>
+        <file>imagines/buttons_hoved.png</file>
+        <file>imagines/buttons_normal.png</file>
+        <file>imagines/buttons_press.png</file>
+        <file>imagines/buttons_PNG127.png</file>
     </qresource>
 </RCC>
